kubernetes/ingress/ingress-service.yml
# apiVersion: networking.k8s.io/v1beta1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ambassador-ingress
  annotations:
    kubernetes.io/ingress.class: ambassador
    # nginx.ingress.kubernetes.io/use-regex: 'true'
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: client-service
          servicePort: 7777
      - path: /api/?(.*)
        backend:
          serviceName: laravel-service
          servicePort: 8888
